trunk/Archive2/5d/883dc672be67cc/output
main.cpp: In function 'int main()':
main.cpp:16:9: error: jump to label 'd' [-fpermissive]
         d:
         ^
main.cpp:10:18: error:   from here [-fpermissive]
             goto d; // ERROR
                  ^
main.cpp:13:17: error:   crosses initialization of 'Foo foo'
             Foo foo;
                 ^
